--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,7 +10,15 @@
   </thead>
 
   <tbody>
-
+    <% @books.each do |book| %>
+      <tr>
+        <td><%= book.title %></td>
+        <td><%= book.body %></td>
+        <td><%= link_to 'Show', book, class: "show_#{book.id}" %></td>
+        <td><%= link_to 'Edit', edit_book_path(book), class: "edit_#{book.id}" %></td>
+        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' }, class: "destroy_#{book.id}" %></td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
 
